--- a/_layouts/about-us.html
+++ b/_layouts/about-us.html
@@ -133,14 +133,16 @@
       <br>
       <h2>Current and upcoming Exhibitions & Performances:</h2>
       <ul>
-        <li><i><b>Slakthusområdet</b></i>, March - April 2025, Stockholm (Streetlight Harvesters)</li>
-        <li><i><b>Screen City Biennial</b></i>, March 2024, Stavanger (Garden of Ghost Flowers)</li>
+        <li><i><b>Språkmuseet</b></i>, November 2025 - November 2026, Stockholm (Flesh of Words)</li>
       </ul>
       <br>
       <h2>Past Exhibitions & Performances:</h2>
       <ul>
+        <li><i><b>British Art Fair: Digitalism</b></i>, September 2025, London (Garden of Ghost Flowers, Reach)</li>
+        <li><i><b>Slakthusområdet</b></i>, March - April 2025, Stockholm (Streetlight Harvesters)</li>
+        <li><i><b>Screen City Biennial</b></i>, March 2024, Stavanger (Garden of Ghost Flowers)</li>
         <li><i><b>British Art Fair PIVOTAL: Digitalism</b></i>, September 2024, London (Reach)</li>
-        <li><i><b>CPH:Dox</b></i>, March 2024, Copenhagen (Garden of Ghost Flowers)</li>
+        <li><i><b>CPH:DOX</b></i>, March 2024, Copenhagen (Garden of Ghost Flowers)</li>
         <li><i><b>Nobel Prize Museum</b></i>, October 2023, Stockholm (Garden of Ghost Flowers)</li>
         <li><i><b>BFI London Film Festival</b></i>, October 2023, London (Fleeting Figures & Interspatial Echoes)</li>
         <li><i><b>Annka Kultys Gallery</b></i>, October 2023, London (Interspatial Echoes)</li>
